--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -125,7 +125,7 @@ h2, h1 {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background: rgba(0, 0, 0, 0.8);
+    /*background: rgba(0, 0, 0, 0.8);*/
     padding: 20px;
     border-radius: 20px;
 }
