--- a/templates/_bad_research.html.twig
+++ b/templates/_bad_research.html.twig
@@ -1,4 +1,4 @@
 <div class="bad-research">
-    <p>The multiverse is empty…</p>
+    <h1>The multiverse is empty…</h1>
     <img src=" {{ asset('assets/images/deadpool.gif') }}" alt="deadpool gif">
 </div>
