--- a/templates/series/serie_details.html.twig
+++ b/templates/series/serie_details.html.twig
@@ -67,7 +67,7 @@
 
                         <div class="details-character-card">
                             <a href="/characters/{{ character.marvelId }}-{{ character.name |slug|lower }}">
-                                <img src="{{ character.thumbnail }}" alt="{{ character.name }}">
+                                <img src="{{ character.thumbnail ?: asset('assets/images/character-no-img.jpg') }}" alt="{{ character.name }}">
                                 <div class="card-infos">
                                     <p>{{ character.name }}</p>
                                 </div>
