feat(style): add pointer for comics cover and variants

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -207,7 +207,12 @@ h2, h1 {
     font-weight: bold;
     cursor: pointer;
 }
+
 /******************************/
+
+#main-cover , .variant-list {
+    cursor: pointer;
+}
 
 .title-mobile {
     display: none;
